Made changes in controllers and migration files
